--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@
 title: Grant Gannaway
 email: grant.gannaway@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  [https://sites.google.com/site/grantgannaway/] (google site)
+  [https://sites.google.com/site/grantgannaway/] (https://sites.google.com/site/grantgannaway/ "google site")
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: grantgannaway
