--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,9 +28,10 @@ twitter_username: grantgannaway
 github_username:  gannawag
 
 # Build settings
-theme: minima
+#theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
