--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -29,6 +29,7 @@ github_username:  gannawag
 
 # Build settings
 #theme: minima
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-feed
   - jekyll-include-cache
