--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -33,6 +33,9 @@ remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-feed
   - jekyll-include-cache
+  
+minimal_mistakes_skin: "contrast" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
