--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -34,7 +34,7 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
 
-google_analytics: G-JG1TVQ5S9W
+google_analytics: "G-JG1TVQ5S9W"
   
 minimal_mistakes_skin: "contrast" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
