--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -34,7 +34,12 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
 
-google_analytics: "G-JG1TVQ5S9W"
+# Analytics
+analytics:
+  provider               : "google-gtag"
+  google:
+    measurement_id          : "G-JG1TVQ5S9W"
+    anonymize_ip         : # true, false (default)
   
 minimal_mistakes_skin: "contrast" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
