--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -38,7 +38,7 @@ plugins:
 analytics:
   provider: "google-gtag"
   google:
-    tracking_id: "G-JG1TVQ5S9W"
+    tracking_id: G-JG1TVQ5S9W
     anonymize_ip: false # default
   
 minimal_mistakes_skin: "contrast" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
