--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 remote_theme: mmistakes/minimal-mistakes
 title: Grant Gannaway
+
+
+minimal_mistakes_skin: "dark" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
