--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -57,6 +57,26 @@ defaults:
       comments: true
       share: true
       related: true
+      author_profile: true
+
+author:
+  name: "Grant Gannaway"
+#  avatar: "/assets/images/bio-photo.jpg"
+#  bio: "I am an **amazing** person." # Note: Markdown is allowed
+  location: "Boston Metro"
+  links:
+    - label: "Google Site"
+      icon: "fas fa-fw fa-link"
+      url: "https://sites.google.com/site/grantgannaway/"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/GrantGannaway"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/gannawag"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/grant-gannaway-321ba326/"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
