--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -81,6 +81,10 @@ author:
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 
+include:
+  - .htaccess
+  - _pages
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
