--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -58,6 +58,13 @@ defaults:
       share: true
       related: true
       author_profile: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
 
 author:
   name: "Grant Gannaway"
