--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,8 +22,8 @@ title: Grant Gannaway
 email: grant.gannaway@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   [https://sites.google.com/site/grantgannaway/] (https://sites.google.com/site/grantgannaway/ "google site")
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/home" # the subpath of your site, e.g. /blog
+url: "https://gannawag.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: grantgannaway
 github_username:  gannawag
 
@@ -91,6 +91,8 @@ paginate_path: /page:num/
 include:
   - .htaccess
   - _pages
+  
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
