--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,8 +22,8 @@ title: Grant Gannaway
 email: grant.gannaway@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   [https://sites.google.com/site/grantgannaway/] (https://sites.google.com/site/grantgannaway/ "google site")
-baseurl: "/home" # the subpath of your site, e.g. /blog
-url: https://gannawag.github.io # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url:  # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: grantgannaway
 github_username:  gannawag
 
@@ -88,7 +88,7 @@ author:
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 
-include: ["_pages"]
+include: _pages
   
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
