--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ email: grant.gannaway@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   [https://sites.google.com/site/grantgannaway/] (https://sites.google.com/site/grantgannaway/ "google site")
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://gannawag.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://gannawag.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: grantgannaway
 github_username:  gannawag
 
