--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -51,7 +51,7 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: posts
+      type: collections
     values:
       layout: single
       author_profile: true
