--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -65,7 +65,6 @@ defaults:
       comments: true
       share: true
       related: true
-      author_profile: true
   # _pages
   - scope:
       path: "_pages"
@@ -73,6 +72,18 @@ defaults:
     values:
       layout: single
       author_profile: true
+  # _docs
+  - scope:
+      path: ""
+      type: docs
+    values:
+      layout: single
+      read_time: false
+      author_profile: false
+      share: false
+      comments: false
+      sidebar:
+        nav: "docs"
 
 author:
   name: "Grant Gannaway"
