--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -52,6 +52,9 @@ collections:
   docs:
     output: true
     permalink: /:collection/:path/
+  collection-archive:
+    output: true
+    permalink: /:collection/:path/
 
 defaults:
   # _posts
@@ -84,6 +87,14 @@ defaults:
       comments: false
       sidebar:
         nav: "docs"
+  # _collection-archive
+  - scope:
+      path: ""
+      type: collection-archive
+    values:
+      layout: single
+      author_profile: false
+      share: true
 
 author:
   name: "Grant Gannaway"
