--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: /docs/quick-start-guide/
+  - title: "Collections"
+    url: /docs/
   - title: "About"
     url: /about/
   - title: "Sample Posts"
