--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -49,9 +49,9 @@ permalink: /:title/
 
 # Collections
 collections:
-  docs:
+  portfolio:
     output: true
-    permalink: /docs/:path/
+    permalink: /:collection/:path/
   collection-archive:
     output: true
     permalink: /:collection/:path/
@@ -87,10 +87,10 @@ defaults:
       comments: false
       sidebar:
         nav: "docs"
-  # _collection-archive
+  # _portfolio
   - scope:
       path: ""
-      type: collection-archive
+      type: portfolio
     values:
       layout: single
       author_profile: false
