--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -45,7 +45,7 @@ minimal_mistakes_skin: "dark" #"default" # "air", "aqua", "contrast", "dark", "d
 
 logo: "/assets/image0.jpeg"
 
-permalink: /:title/
+#permalink: /:title/
 
 # Collections
 collections:
