--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -95,6 +95,7 @@ defaults:
       layout: single
       author_profile: false
       share: true
+      title: /:path/
 
 author:
   name: "Grant Gannaway"
