--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -122,7 +122,7 @@ paginate_path: /page:num/
 include: 
     - _pages
   
-markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+markdown_ext: "markdown,mkdown,mkdn,mkd,md,rmd"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
