--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -93,8 +93,10 @@ defaults:
       type: portfolio
     values:
       layout: single
-      author_profile: false
+      author_profile: true
+      comments: true
       share: true
+      related: true
       title: /:path/
 
 author:
