--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -96,7 +96,7 @@ defaults:
       author_profile: true
       comments: true
       share: true
-      related: true
+      related: false
       title: /:path/
 
 author:
